<resources>
    <string name="app_name">Vanhitech</string>
    <string name="titile">云海智能家居</string>


    <string name="camera_open_notice">您已经开启了灯光！</string>
    <string name="camera_close_notice">您已经关闭了灯光！</string>
    <string name="camera_problem">抱歉，您相机出现问题。您可能需要重启设备。</string>
    <string name="framwork_problem">二维码扫描暂时出现问题。您重启再试。</string>
    <string name="msg_share_subject_line">这是我所扫描条码的内容</string>
    <string name="msg_default_mms_subject">Hi</string>
    <string name="msg_intent_failed">抱歉，无法打开所需软件。 条码内容可能无效。</string>
    <string name="button_ok">确定</string>
    <string name="button_cancel">取消</string>
    <string name="result_uri">网址路径</string>
    <string name="button_1">浏览器打开</string>
    <string name="button_2">内容</string>
    <string name="button_3">其它标题</string>
    <string name="result_title_default">网址路径</string>
    <string name="qrcode_notice">将二维码图案放在取景框内，即可自动扫描。</string>
    <string name="openorclose_light">打开或关闭灯光</string>
    <string name="qrcode_empty"></string>
    <string name="qrcode_open">用浏览器打开</string>
    <string name="paramete_error">参数正确，请重新扫描</string>
    <string name="device_info">设备信息</string>
    <string name="device_remote_control">遥控匹配</string>
    <string name="timing">定时</string>
    <string name="curtain_open">开</string>
    <string name="curtain_close">合</string>
    <string name="curtain_pause">暂停</string>


    <string name="is_positive">确定</string>
    <string name="scene_rgb">彩色</string>
    <string name="scene_cw">暖白</string>
    <string name="rgb">RGB</string>
    <string name="bright">亮度</string>
    <string name="colortemp">色温</string>
    <string name="mode">模式</string>
    <string name="speed">速度</string>

    <string name="currentstatus">当前状态</string>
    <string name="historicalstate">历史状态</string>
    <string name="doorlock">门锁</string>
    <string name="startup">开启</string>

    <string name="delete">删除</string>
    <string name="save">保存</string>
    <string name="main_name">云海智能家居</string>
    <string name="forget_pw">忘记密码</string>
    <string name="user_name">用户名</string>
    <string name="email">邮箱</string>
    <string name="title1">设备列表</string>
    <string name="title2">情景模式</string>
    <string name="title3">系统设置</string>
    <string name="room_name">修改房间名</string>
    <string name="welecome">欢迎回来</string>
    <string name="userName">用户名</string>
    <string name="password">密码</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="more">更多云海物联信息</string>
    <string name="oldPwd">旧密码</string>
    <string name="newPwd">新密码</string>
    <string name="confirmPwd">确认密码</string>
    <string name="confirmPwd1">确认新密码</string>
    <string name="modifyPwd">修改密码</string>
    <string name="modifyMsg">修改信息</string>
    <string name="nor_problem">常见问题</string>
    <string name="about">关于我们</string>
    <string name="edit">编辑</string>
    <string name="add">添加</string>
    <string name="emailAddress">邮箱地址</string>
    <string name="userNameForLogin">用户用于登陆app</string>
    <string name="emailForFindPwd">邮箱用于找回密码</string>
    <string name="configDevice">配置设备</string>
    <string name="config">配置</string>
    <string name="routerName">路由器名称</string>
    <string name="routerPwd">路由器密码</string>
    <string name="roomMsg">房间信息</string>
    <string name="submit">提交</string>
    <string name="plug_info">设备信息</string>
    <string name="light">灯光</string>
    <string name="log_out">退出账号</string>
    <string name="phone">手机号</string>
    <string name="device_G">添加设备</string>
    <string name="manual_input">添加2.4G设备</string>
    <string name="next">下一步</string>
    <string name="success">成功!</string>
    <string name="error">失败!</string>
    <string name="er1">SQL 错误!</string>
    <string name="er2">设备类型未实现或不存在!</string>
    <string name="er5">设备未备案!</string>
    <string name="er6">未知错误!</string>
    <string name="er7">用户名或者密码错误!</string>
    <string name="er8">用户未登录!</string>
    <string name="er9">空结果集!</string>
    <string name="er10">超时!</string>
    <string name="er101">Wifi设备尚未绑定!</string>
    <string name="er102">Wifi设备不在线!</string>
    <string name="er103">设备ID长度错误!</string>
    <string name="er104">添加2.4G设备失败!</string>
    <string name="er105">设备不在线!</string>
    <string name="er106">用户ID不存在!</string>
    <string name="er107">设备不属于用户!</string>
    <string name="er108">设备不在库中!</string>
    <string name="er109">密码错误!</string>
    <string name="er110">设备已被添加过!</string>
    <string name="er111">设备SN不在库中!</string>
    <string name="er112">设备MAC不存在!</string>
    <string name="er201">Socket错误!</string>
    <string name="er404">文件不存在!</string>
    <string name="er405">文件上传失败!</string>
    <string name="er406">文件太大!</string>
    <string name="er407">视图不存在!</string>
    <string name="er408">重设密码时手机号和注册手机号不同!</string>
    <string name="er409">验证码不匹配!</string>
    <string name="er410">注册时提供的用户名和获取验证码时不一样!</string>
    <string name="er411">验证码已过期!</string>
    <string name="er412">验证方法不存在!</string>
    <string name="er413">短信发送失败!</string>
    <string name="er414">同名情景已存在</string>
    <string name="er501">目标服务器未指定!</string>
    <string name="er502">源服务器未指定!</string>
    <string name="er503">设备指令编码不存在!</string>
    <string name="er504">APP的指令编码不存在!</string>
    <string name="er505">通信验证串失败!</string>
    <string name="er506">Json解析过程出错!</string>
    <string name="er507">状态位长度错误!</string>
    <string name="er508">类型不匹配!</string>
    <string name="er509">发送完数据后关闭连接!</string>
    <string name="er510">设备请求断网!</string>
    <string name="er511">长时间未收到有效数据!</string>
    <string name="er512">客户端连接断开!</string>
    <string name="er513">服务器断网!</string>
    <string name="er514">服务器请求断网!</string>
    <string name="er515">状态位为空!</string>
    <string name="er516">被其它相同ID的设备上线踢掉!</string>
    <string name="er601">设备不属于场景!</string>
    <string name="er602">修改场景设备失败!</string>
    <string name="er603">从场景删除设备失败!</string>
    <string name="er604">设备已在场景中!</string>
    <string name="er605">添加设备到场景失败!</string>
    <string name="er606">删除设备失败!</string>
    <string name="er607">删除常用设备失败!</string>
    <string name="er608">修改场景失败!</string>
    <string name="er609">删除场景失败!</string>
    <string name="er610">添加场景失败!</string>
    <string name="er611">修改定时失败!</string>
    <string name="er612">添加定时失败!</string>
    <string name="er613">用户名已存在!</string>
    <string name="er614">重设密码时填写的邮箱和注册邮箱不同!</string>
    <string name="er615">重设密码邮件发送失败!</string>
    <string name="er616">控制中心回应添加2.4G设备失败!</string>
    <string name="er617">服务期间通信失败!</string>
    <string name="er618">%000 的用户后名缀不存在或无效!</string>
    <string name="er619">校验和错误!</string>
    <string name="er620">设备已在常用列表中!</string>
    <string name="er621">控制中心回应删除2.4G失败!</string>
    <string name="er622">用户名为空!</string>
    <string name="er623">用户名不存在!</string>
    <string name="er624">App版本过低!</string>
    <string name="er625">要更换的中心MAC和原来一样!</string>
    <string name="er626">字段不能为空!</string>
    <string name="er627">数据发送队列已满!</string>
    <string name="er700">AES解码错误!</string>
    <string name="er701">定时任务不存在!</string>
    <string name="er800">服务器已停用,请更新App!</string>
    <string name="er801">添加日志失败!</string>
    <string name="er802">修改日志失败!</string>
    <string name="er803">删除日志失败!</string>
    <string name="er804">位置分组操作失败!</string>
    <string name="er805">分组名称重复!</string>
    <string name="er806">分组ID不存在!</string>
    <string name="er999">服务器已停用,请更新App!</string>
    <string name="othererror">错误</string>
    <string name="inputemail">请输入邮箱</string>
    <string name="inputcorrectemail">请输入正确的邮箱！</string>
    <string name="inputcorrectphone">请输入正确的手机号！</string>
    <string name="inputphone">请输入手机号</string>
    <string name="phonenotnull">手机号不能为空!</string>
    <string name="usernamenotnull">用户名不能为空!</string>
    <string name="passnotnull">密码不能为空!</string>
    <string name="oldpassnotnull">旧密码不能为空!</string>
    <string name="newpassnotnull">新密码不能为空!</string>
    <string name="oldpasserror">旧密码输入错误!</string>
    <string name="twoinputerror">两次输入的新密码不一致，请重新输入!</string>
    <string name="wifinamenotnull">路由器名称不能为空!</string>
    <string name="configfailed">配置失败!</string>
    <string name="configsuccess">配置成功!</string>
    <string name="add_sence">添加情景模式</string>
    <string name="add_sence_1">名称可自定义</string>
    <string name="timeron">开</string>
    <string name="timeroff">关</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="fiv">五</string>
    <string name="six">六</string>
    <string name="seven">日</string>
    <string name="week_one">周一</string>
    <string name="week_two">周二</string>
    <string name="week_three">周三</string>
    <string name="week_four">周四</string>
    <string name="week_fiv">周五</string>
    <string name="week_six">周六</string>
    <string name="week_seven">周日</string>
    <string name="digits">-0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="airtype">空调品牌</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="check">提交</string>
    <string name="app_id">56ff5488</string>


</resources>
