<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:id="@+id/layout_logintest"
              android:layout_height="match_parent"
              android:orientation="vertical">

                <!--android:background="@mipmap/login_bg"-->
    <TextView
        style="@style/title_style"
        android:text="@string/main_name"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            style="@style/title_style"
            android:layout_marginTop="1dp"
            android:text="@string/forget_pw"/>

        <EditText
            android:id="@+id/login_et_username"
            style="@style/edittext_style"
            android:layout_marginTop="10dp"
            android:hint="@string/user_name"
           />


        <EditText
            android:id="@+id/login_et_email"
            style="@style/edittext_style"
            android:layout_marginTop="18dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            />


        <Button
            android:id="@+id/btn_submit"
            style="@style/bg_bt_style"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_bt"
            android:text="@string/submit"
            android:textColor="@drawable/login_text_color"
            >
        </Button>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView2"
                style="@style/bg_leftarrow_style"
                />
            <Button
                android:textSize="18dp"
                style="@style/bg_text_style"
                android:onClick="bt_login"
                android:id="@+id/bt_login"
                android:textColor="@drawable/login_text_color"
                android:text="@string/login"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
