<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:id="@+id/layout_logintest"

              android:layout_height="match_parent"
              android:orientation="vertical">

              <!--android:background="@mipmap/login_bg"-->
    <TextView
        android:layout_marginTop="15dp"
        style="@style/title_style"
        android:gravity="center"
        android:text="@string/titile"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/title_style"
            android:layout_marginTop="1dp"
            android:text="@string/regist"/>

        <EditText
            android:id="@+id/login_et_phone"
            style="@style/edittext_style"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            android:hint="@string/phone"
            />


        <EditText
            android:id="@+id/login_et_email"
            style="@style/edittext_style"
            android:layout_marginTop="18dp"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            />


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            >

            <EditText
                android:id="@+id/login_et_password"
                style="@style/edittext_style"
                android:hint="@string/password"
                android:password="true"
                />

            <CheckBox
                android:id="@+id/cb_is_visible"
                android:layout_width="67px"
                android:layout_margin="5dp"
                android:layout_height="67px"
                android:layout_alignBottom="@+id/login_et_password"
                android:button="@null"
                android:layout_alignEnd="@+id/login_et_password"
                android:layout_alignRight="@+id/login_et_password"
                android:background="@drawable/regsiter_checkbox"/>

        </RelativeLayout>


        <Button
            android:id="@+id/btn_regsiter_go"
            style="@style/bg_bt_style"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_bt"
            android:text="@string/regist"
            android:textColor="@drawable/login_text_color"
            >
        </Button>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:gravity="center"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/imageView2"
                style="@style/bg_leftarrow_style"
                />
            <Button
                android:textSize="18dp"
                style="@style/bg_text_style"
                android:onClick="bt_login"
                android:id="@+id/bt_login"
                android:textColor="@drawable/login_text_color"
                android:text="@string/login"
               />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
